@@ -1,3 +1,9 @@
+2018-01-06  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* Use the pane layout manager for file dialogs. Fix a file dialog
+	bug when there are multiple directory entries that different only
+	in their upper/lower/title case.
+
 2018-01-03  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* Added the pane layout manager.
